# skin-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  manage.py  pyproject.toml  skin.db
.confidential/: default.json
.github/workflows/: ci.yml
product_search/: admin.py  forms.py  models.py  urls.py  views.py
product_search/fixtures/: product_search.json
product_search/management/commands/: load_product.py
product_search/migrations/: 0001_initial.py  0002_auto_20200804_1820.py  0003_auto_20200804_1828.py
skin_app/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
skin_app/skin_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  layout.html  search.html  searched.html
