[tool.poetry]
name = "skin-app"
version = "0.1.0"
description = ""
authors = ["Wooyang Son <sonwy102@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
confidential = "^2.3.1"
django-storages = "^1.9.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
requests = "^2.24.0"
djangorestframework = "^3.11.0"
pillow = "^10.0.1"
django-extensions = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-django = "^3.9.0"
pytest-xdist = "^1.32.0"
black = {version = "^19.10b0", allow-prereleases = true}
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
